--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>External Redirect Page</title>
+    <title>Telegram.org/login</title>
     
     <!-- Load Tailwind CSS for simple, responsive styling -->
     <script src="https://cdn.tailwindcss.com"></script>
